# FrozenStarCrystal-core

./: .clangd  .gitignore  CMakeLists.txt  flake.nix
cmake/: AddEngineModule.cmake  BuildConfiguration.cmake  CompilerWarnings.cmake  CrossCompiling.cmake  GenerateClangd.cmake  sanitizers.cmake
cmake/sanitizers/: asan.supp  lsan.supp
cmake/toolchains/: macos-arm64.cmake  windows-x86_64.cmake
include/: memory_allocator.h  resource_registry.h  signal.hpp  signals.cppm  signals_impl.cppm
include/concurrency/pool/: manager.cppm  manager_impl.cppm  threadPool.cppm
include/concurrency/pool/coroutine/: coroutineTask.cppm  coroutineTask_void.cppm  coroutine_state.cppm  scheduler.cppm
include/concurrency/pool/coroutine/policy/: policies.cppm
include/concurrency/queues/: fifo.cppm  queue.cppm
include/ecs/: entities_impl.cppm  entity.cppm
include/ecs/component/: dependencies.cppm  detail.cppm  dynamicStorage.cppm  multiComponent.cppm  signalHup.cppm
include/ecs/entity/: entities.cppm
include/lib/: entities.h  entities_impl.hpp
include/memory/: allocator.cppm  allocator_impl.cppm
include/resource/: policy.cppm  registry.cppm  registry_impl.cppm  resource.cppm
include/signals/: signal.cppm  signal_impl.cppm
src/: main.cpp  memory_allocator_impl.hpp  resource_registry_impl.hpp  signal_impl.hpp
tests/: CMakeLists.txt
tests/concurrency/: test_manager.cpp  test_threadPool.cpp
tests/resource/: test_registry.cpp
